Agregamos imagenes y modificamos estilos

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <h2 class="nombre_logo"> evelyn. </h2>
+            <h2 class="nombre_logo"> e<span class="letrav">v</span>elyn<span class="letrav">.</span></h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,21 +81,6 @@
     </div>
     <!--footer-->
     <footer>
-        <!-- <div class="row">
-            <div class="col-lg-6 col-md-6 padd">
-                <i class="far fa-envelope iconofooter"></i>
-                <h4 class="footerdatos">evebonato23@gmail.com</h4>
-
-                </a>
-            </div>
-            <div class="col-lg-6 col-md-6 local">
-                <i class="fas fa-map-marker-alt iconofooter"></i>
-                <h4 class="footerdatos">Entre Rios - Argentina</h4>
-
-                </a>
-            </div>
-        </div> -->
-
         <div class="row">
             <div class="footer-copyright text-center py-3 col-lg-12 col-md-12"> © 2020 Hecho por Evelyn <i
                     class="fas fa-heart"></i>
