Borramos imagenes, agregamos estilos

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Keywords" lang="es"
-        content="diseño web, diseno web, portafolio web, portfolio, website design, responsive design, frontend, diseño de interfaces, diseño UI, diseño UX, maquetacion web, CSS3, FIGMA, JAVASCRIPT" />
-    <meta name="description" lang="es"
-        content="Evelyn Bonato - Diseñadora web, conocimientos en Html, css, javascript, sass, figma, diseño de interfaces interactivas.  Responsabilidad y formacion constante." />
+    <meta name="Keywords" lang="es" content="diseño web, diseno web, portafolio web, portfolio, website design, responsive design, frontend, diseño de interfaces, diseño UI, diseño UX, maquetación
+        Cómo se pronuncia
+         web, CSS3, FIGMA, JAVASCRIPT" />
+    <meta name="description" lang="es" content="Evelyn Bonato - Diseñadora web, conocimientos en Html, css, javascript, sass, figma, diseño de interfaces interactivas.  Responsabilidad y 
+        formación constante." />
     <title> Evelyn - Diseñadora Web</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
@@ -26,6 +26,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -33,7 +34,7 @@
 
     <!-- barra de navegacion -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-xl navbar-light bg-light">
         <a class="navbar-brand" href="#">
             <h2 class="nombre_logo"> e<span class="letrav">v</span>elyn<span class="letrav">.</span></h2>
         </a>
@@ -60,10 +61,13 @@
                 </li>
             </ul>
         </div>
-        <a class="d-none d-md-block" href="#"><i class="fab fa-behance"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-instagram"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-github"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-linkedin"></i></a>
+        <a class="d-none d-xl-block" href="https://www.behance.net/" target="_blank"><i class="fab fa-behance"></i></a>
+        <a class="d-none d-xl-block" href="https://www.instagram.com/evebonato/" target="_blank"><i
+                class="fa fa-instagram"></i></a>
+        <a class="d-none d-xl-block" href="https://github.com/evebonato" target="_blank"><i
+                class="fa fa-github"></i></a>
+        <a class="d-none d--block" href="https://www.linkedin.com/in/evelyn-bonato-4246042a/" target="_blank"><i
+                class="fa fa-linkedin"></i></a>
     </nav>
     <!--banner-->
     <div class="banner">
@@ -74,20 +78,18 @@
                     Wordpress | UX | Gráficas
                 </h2>
                 <button type="button" class="banner_button btn btn-light mt-md-4">
-                    <a href="./views/contacto.html" style="color: black;"> Contacto </a>
+                    <a href="./views/mistrabajos.html" style="color: black;"> Portafolio </a>
                 </button>
             </span>
         </div>
     </div>
     <!--footer-->
-    <footer>
-        <div class="row">
-            <div class="footer-copyright text-center py-3 col-lg-12 col-md-12"> © 2020 Hecho por Evelyn <i
-                    class="fas fa-heart"></i>
-            </div>
+    <footer id="sticky-footer" class="py-4 bg-white text-black-100 footer1">
+        <div class="container text-center">
+            <large> © 2020 Hecho por Evelyn<i class="fas fa-heart"></i></large>
         </div>
-
     </footer>
+
 
 </body>
 
